Support the Function filter field in FunctionCopyVisitor.